config("sqlitecpp_config") {
  include_dirs = [ "include" ]
  libs = [ "sqlite3" ]
}

static_library("sqlitecpp") {
  sources = [
    "src/Backup.cpp",
    "src/Column.cpp",
    "src/Database.cpp",
    "src/Statement.cpp",
    "src/Transaction.cpp",
  ]
  public_configs = [ ":sqlitecpp_config" ]
}

#executable("example1") {
#  sources = [
#    "examples/example1/main.cpp",
#  ]
#  deps = [
#    ":sqlitecpp",
#  ]
#}
